--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.4.5",
+    "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "styled-components": "^6.1.0",
+    "yup": "^1.3.2"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
